# web_HW13

./: .env.example  .gitignore  main.py  pyproject.toml
src/database/: db.py
src/repository/: users.py
src/routes/: auth.py  users.py
src/services/: auth.py  mail.py
src/templates/: index.html
